added nav img width height

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
 
       <label for="navToggle" class="nav-toggle__label">
-        <span id="toggleNav"><img src="./images/icon-hamburger.svg" alt="Nav menu button"></span>
+        <span id="toggleNav"><img class="nav-toggle__img" src="./images/icon-hamburger.svg" alt="Nav menu button"></span>
       </label>
     </div>
 
