added thankyou img class

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
   <!-- Thankyou modal start -->
   <section id="thankYou" class="thankyou" data-animation="zoomInOut">
     <div class="card card--thankyou">
-      <img src="./images/icon-check.svg" alt="" loading="lazy">
+      <img class="thankyou__img" src="./images/icon-check.svg" alt="" loading="lazy">
 
       <header class="thankyou__header">
         <h2>Thanks for your support!</h2>
