--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Crowdfund</title>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- External Stylesheets -->
   <link rel="stylesheet" href="./css/defaults.css">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/responsive.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
   <!-- External Script -->
   <script src="main.js" defer></script>
 </head>
@@ -41,7 +41,8 @@
       </nav>
 
       <label for="navToggle" class="nav-toggle__label">
-        <span id="toggleNav"><img class="nav-toggle__img" src="./images/icon-hamburger.svg" alt="Nav menu button"></span>
+        <span id="toggleNav"><img class="nav-toggle__img" src="./images/icon-hamburger.svg"
+            alt="Nav menu button"></span>
       </label>
     </div>
 
@@ -285,9 +286,11 @@
           <p class="card--popup__description">Enter your pledge</p>
           <div class="card--popup__inner-flex">
             <label for="bambooInput">
-              <input id="bambooInput" class="card--popup__input br-33" type="text" name="bambooInput" placeholder="$25" data-input="">
+              <input id="bambooInput" class="card--popup__input br-33" type="text" name="bambooInput" placeholder="$25"
+                data-input="">
             </label>
-            <button class="btn btn--primary btn--sm" data-open="thankYou" data-close="selectReward" data-backBambooProject="">Continue</button>
+            <button class="btn btn--primary btn--sm" data-open="thankYou" data-close="selectReward"
+              data-backBambooProject="">Continue</button>
           </div>
         </div>
       </div>
@@ -321,9 +324,11 @@
           <p class="card--popup__description">Enter your pledge</p>
           <div class="card--popup__inner-flex">
             <label for="blackEditionInput">
-              <input id="blackEditionInput" class="card--popup__input br-33" type="text" name="blackEditionInput" placeholder="$75" data-input="">
+              <input id="blackEditionInput" class="card--popup__input br-33" type="text" name="blackEditionInput"
+                placeholder="$75" data-input="">
             </label>
-            <button class="btn btn--primary btn--sm" data-open="thankYou" data-close="selectReward" data-backBlackEditionProject="">Continue</button>
+            <button class="btn btn--primary btn--sm" data-open="thankYou" data-close="selectReward"
+              data-backBlackEditionProject="">Continue</button>
           </div>
         </div>
       </div>
