added local fonts, fixed file paths

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="./css/defaults.css">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/responsive.css">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
+
   <!-- External Script -->
   <script src="main.js" defer></script>
 </head>
@@ -23,7 +22,7 @@
       <input type="checkbox" name="nav-toggle" id="navToggle" class="nav-toggle">
 
       <nav class="nav">
-        <img class="nav__logo" src="./images/logo.svg" alt="Mastercraft">
+        <img class="nav__logo" src="./assets/images/logo.svg" alt="Mastercraft">
 
         <ul id="navList" class="nav__list">
           <li class="nav__list-item">
@@ -41,7 +40,7 @@
       </nav>
 
       <label for="navToggle" class="nav-toggle__label">
-        <span id="toggleNav"><img class="nav-toggle__img" src="./images/icon-hamburger.svg"
+        <span id="toggleNav"><img class="nav-toggle__img" src="./assets/images/icon-hamburger.svg"
             alt="Nav menu button"></span>
       </label>
     </div>
@@ -49,7 +48,7 @@
     <main id="main">
       <!-- Master Craft -->
       <section class="mastercraft br-8">
-        <img class="mastercraft__logo" src="./images/logo-mastercraft.svg" alt="">
+        <img class="mastercraft__logo" src="./assets/images/logo-mastercraft.svg" alt="">
 
         <header class="mastercraft__header">
           <h1 class="mastercraft__title">Mastercraft Bamboo Monitor Riser</h1>
@@ -64,11 +63,11 @@
 
           <div id="bookmarked" class="bookmark br-33">
             <div>
-              <img id="bookmark" class="bookmark__img" src="./images/icon-bookmark.svg"
+              <img id="bookmark" class="bookmark__img" src="./assets/images/icon-bookmark.svg"
                 alt="Bookmark Mastercraft bamboo monitor riser">
             </div>
             <div>
-              <img id="bookmarkCyan" class="bookmark__img bookmark__img--cyan" src="./images/icon-bookmark-cyan.svg"
+              <img id="bookmarkCyan" class="bookmark__img bookmark__img--cyan" src="./assets/images/icon-bookmark-cyan.svg"
                 alt="Bookmark Mastercraft bamboo monitor riser">
             </div>
             <div>
@@ -231,7 +230,7 @@
     <div class="container">
       <header class="back-project__header">
         <h2 class="back-project__title">Back this project</h2>
-        <img class="back-project__close" src="./images/icon-close-modal.svg" alt="Close Back Project"
+        <img class="back-project__close" src="./assets/images/icon-close-modal.svg" alt="Close Back Project"
           data-close="selectReward" loading="lazy">
       </header>
       <p class="back-project__description">
@@ -378,7 +377,7 @@
   <!-- Thankyou modal start -->
   <section id="thankYou" class="thankyou" data-animation="zoomInOut">
     <div class="card card--thankyou">
-      <img class="thankyou__img" src="./images/icon-check.svg" alt="" loading="lazy">
+      <img class="thankyou__img" src="./assets/images/icon-check.svg" alt="" loading="lazy">
 
       <header class="thankyou__header">
         <h2>Thanks for your support!</h2>
