removed lazy loading

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <header class="back-project__header">
         <h2 class="back-project__title">Back this project</h2>
         <img class="back-project__close" src="./assets/images/icon-close-modal.svg" alt="Close Back Project"
-          data-close="selectReward" loading="lazy">
+          data-close="selectReward">
       </header>
       <p class="back-project__description">
         Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
@@ -377,7 +377,7 @@
   <!-- Thankyou modal start -->
   <section id="thankYou" class="thankyou" data-animation="zoomInOut">
     <div class="card card--thankyou">
-      <img class="thankyou__img" src="./assets/images/icon-check.svg" alt="" loading="lazy">
+      <img class="thankyou__img" src="./assets/images/icon-check.svg" alt="">
 
       <header class="thankyou__header">
         <h2>Thanks for your support!</h2>
