updated days left / fixed radio selection when 0 mahogany left / formatted files

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 alt="Bookmark Mastercraft bamboo monitor riser">
             </div>
             <div>
-              <img id="bookmarkCyan" class="bookmark__img bookmark__img--cyan" src="./assets/images/icon-bookmark-cyan.svg"
-                alt="Bookmark Mastercraft bamboo monitor riser">
+              <img id="bookmarkCyan" class="bookmark__img bookmark__img--cyan"
+                src="./assets/images/icon-bookmark-cyan.svg" alt="Bookmark Mastercraft bamboo monitor riser">
             </div>
             <div>
               <p id="bookmarkedPar" class="bookmark__par">Bookmarked</p>
